fix the color of the navbar items when dark mode is active

--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,7 @@ section {
     top: 0;
     right: 0;
     z-index: 200;
-    background: #fff;
+    background: #aaa3a3fb;
     flex-direction: column;
     line-height: 30px;
     justify-content: center;
